cmake_minimum_required(VERSION 3.10)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp primary1/test.cpp primary1/5.queueRealizeStack.cpp primary1/5.queueRealizeStack.cpp primary1/4.stack_realize_queue.cpp primary1/11.printRectange.cpp primary1/1.rotateRect.cpp primary1/2.reverseList.cpp primary1/zigzag_print.cpp primary1/findNumInSoredMatrix.cpp primary1/printSame.cpp primary1/palindrome.cpp primary1/ListSort.cpp primary1/test.cpp primary2/BothLoop.cpp primary2/nodeNext.cpp primary2/findPre.cpp)