cmake_minimum_required(VERSION 3.10)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp primary1/5.queueRealizeStack.cpp primary1/5.queueRealizeStack.cpp primary1/4.stack_realize_queue.cpp primary1/11.printRectange.cpp primary1/1.rotateRect.cpp primary1/2.reverseList.cpp primary2/BothLoop.cpp primary2/nodeNext.cpp primary2/findPre.cpp)