cmake_minimum_required(VERSION 3.10)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp primary1/5.queueRealizeStack.cpp primary1/5.queueRealizeStack.cpp primary1/4.stack_realize_queue.cpp primary1/11.printRectange.cpp primary1/1.rotateRect.cpp primary1/2.reverseList.cpp primary2/BothLoop.cpp primary2/nodeNext.cpp primary2/findPre.cpp primary2/serializer.cpp primary2/desSerialization.cpp primary2/test.cpp primary2/completeBT.cpp primary2/randomPool.cpp primary2/UnionFind.cpp primary2/Trie.cpp primary2/joint_str.cpp primary2/cutGoldBar.cpp primary2/priority_queue.cpp primary2/N_factorial.cpp primary2/Hanoi.cpp primary2/sub_str.cpp primary2/sub_str2.cpp primary2/full_permutation.cpp primary2/cows_num.cpp)